--- a/unemployment.html
+++ b/unemployment.html
@@ -1,25 +1,23 @@
 <!doctype html>
 <html>
 <head>
-    <title>Narrative Visualization</title>
     <style>
         .bar {
-            fill: green;
+            fill: lightskyblue;
         }
         .highlight {
-            fill: red;
+            fill:green;
         }
     </style>
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="https://rawgit.com/susielu/d3-annotation/master/d3-annotation.min.js"></script>
-    <link rel="stylesheet" href="main.css">
 
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-<h2> Salary Statistics by Majors in Undergrad</h2>
-<p>The bar chart below is a Visualization of <mark>Early Career median salaries</mark> from different majors.</p>
+<p>The bar chart below shows the <mark>Unemployment Rate </mark> of people from different majors in their undergraduate studies.</p>
 <p><mark>Hover you mouse over the bar</mark> to explore the data associated with each major</p>
-<p>This dataset was obtained from https://www.newyorkfed.org/research/college-labor-market/index#/outcomes-by-major</p>>
+
 <svg width="1500" height="600"></svg>
 <script>
 
@@ -40,9 +38,9 @@
         }
 
         xScale.domain(data.map(function(d) { return d.major; }));
-        yScale.domain([0, d3.max(data, function(d) { return d.Earlycareer; })]);
+        yScale.domain([0, 13]);
 
-         g.append("g")
+        g.append("g")
         .attr("class", "axis")
         .attr("transform", "translate(0," + height + ")")
         .call(d3.axisBottom(xScale))
@@ -53,8 +51,7 @@
         .attr("dy", "-0.5em")
         .attr("transform", "rotate(-65)");
 
-      
-        g.append("g") // 'major' text position 
+        g.append("g")
          .attr("transform", "translate(0," + height + ")")
          //.call(d3.axisBottom(xScale))
          .append("text")
@@ -62,18 +59,20 @@
          .attr("x", 1350)
          .attr("text-anchor", "end")
          .attr("stroke", "black")
-         .text("major");  
+         .text("major");
 
         g.append("g")
          .call(d3.axisLeft(yScale).tickFormat(function(d){
-             return "$" + d;
+             return d + "%";
          })
          .ticks(10))
          .append("text")
          .attr("transform", "rotate(-90)")
+         .attr("y", 66)
          .attr("dy", "-5.1em")
          .attr("text-anchor", "end")
-         .attr("stroke", "black");
+         .attr("stroke", "black")
+         .text("percent change");
 
         g.selectAll(".bar")
          .data(data)
@@ -82,9 +81,9 @@
          .on("mouseover", onMouseOver) //Add listener for the mouseover event
          .on("mouseout", onMouseOut)   //Add listener for the mouseout event
          .attr("x", function(d) { return xScale(d.major); })
-         .attr("y", function(d) { return yScale(d.Earlycareer); })
+         .attr("y", function(d) { return yScale(d.UnemploymentRate); })
          .attr("width", xScale.bandwidth())
-         .attr("height", function(d) { return height - yScale(d.Earlycareer); });
+         .attr("height", function(d) { return height - yScale(d.UnemploymentRate); });
     });
 
     //mouseover event handler function
@@ -92,8 +91,8 @@
         d3.select(this).attr('class', 'highlight');
         d3.select(this)
           .attr('width', xScale.bandwidth() + 5)
-          .attr("y", function(d) { return yScale(d.Earlycareer) - 10; })
-          .attr("height", function(d) { return height - yScale(d.Earlycareer) + 10; });
+          .attr("y", function(d) { return yScale(d.UnemploymentRate) - 10; })
+          .attr("height", function(d) { return height - yScale(d.UnemploymentRate) + 10; });
 
         g.append("text")
          .attr('class', 'val') 
@@ -101,10 +100,10 @@
              return xScale(d.major);
          })
          .attr('y', function() {
-             return yScale(d.Earlycareer) - 15;
+             return yScale(d.UnemploymentRate) - 15;
          })
          .text(function() {
-             return [ d.major + ': $' +d.Earlycareer];  // Value of the text
+             return [d.major + ': ' +d.UnemploymentRate + '%'];  // Value of the text
          });
     }
 
@@ -114,8 +113,8 @@
         d3.select(this).attr('class', 'bar');
         d3.select(this)
           .attr('width', xScale.bandwidth())
-          .attr("y", function(d) { return yScale(d.Earlycareer); })
-          .attr("height", function(d) { return height - yScale(d.Earlycareer); });
+          .attr("y", function(d) { return yScale(d.UnemploymentRate); })
+          .attr("height", function(d) { return height - yScale(d.UnemploymentRate); });
 
         d3.selectAll('.val')
           .remove()
@@ -124,32 +123,29 @@
     const annotations = [
     {
         note: {
-        label: "Chemical Engineering",
+        label: "Fine Art",
         title: "highest",
         wrap: 200,  // try something smaller to see text split in several lines
         padding: 10   // More = text lower
         
         },
         color: ["black"],
-        x: 450,
-        y: 120,
+        x: 1075,
+        y: 140,
         dy: -50,
-        dx: -100
+        dx: 100
     }]
 
     const makeAnnotations = d3.annotation().annotations(annotations)
     svg.append("g").call(makeAnnotations)
 </script>
 
-<p>Please feel free to <mark>navigate to the next page</mark> if you are interested in the mid-career median salaries for these majors!</p>
-
 <div class="pagination">
     <a href="#">&laquo;</a>
-    <a class="active" href="index.html">1</a>
+    <a href="index.html">1</a>
     <a href="midcareer.html">2</a>
-    <a href="unemployment.html">3</a>
+    <a class="active" href="unemployment.html">3</a>
     <a href="#">&raquo;</a>
 </div>
-
 </body>
 </html>
